WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293464
css/css-view-transitions/root-style-change-during-animation.html fails due to visibility:hidden not being respected on the VT pseudo
https://bugs.webkit.org/show_bug.cgi?id=293464
Summary
css/css-view-transitions/root-style-change-during-animation.html fails due to...
Matt Woodrow
Reported
2025-05-22 18:10:40 PDT
Per-title
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-22 18:12:10 PDT
<
rdar://problem/151891703
>
Matt Woodrow
Comment 2
2025-05-22 18:15:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45807
EWS
Comment 3
2025-05-23 21:11:03 PDT
Committed
295386@main
(4a3d6eaaf8bf): <
https://commits.webkit.org/295386@main
> Reviewed commits have been landed. Closing PR #45807 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug