css/css-view-transitions/root-style-change-during-animation.html fails due to visibility:hidden not being respected on the VT pseudo. https://bugs.webkit.org/show_bug.cgi?id=293464 <rdar://151891703>

Reviewed by Tim Nguyen.

Visibility:hidden for the ::view-transition-new pseudo is applied as part of
attaching compositing layers, so make sure this bit gets invalidated.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderViewTransitionCapture.cpp:
(WebCore::RenderViewTransitionCapture::styleDidChange):
* Source/WebCore/rendering/RenderViewTransitionCapture.h:

Canonical link: https://commits.webkit.org/295386@main